--- a/about_meEN.html
+++ b/about_meEN.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="img/king.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <title>Amauj Portafolio</title>
+    <title>Amauj´s Portfolio</title>
     <script defer src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,7 +34,7 @@
     </div>
 
     <nav>
-      <a href="index.html"
+      <a href="indexEN.html"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -46,18 +46,19 @@
       ></a>
       <ul>
         <li>
-          <a href="projects.html">Proyectos</a>
+          <a href="projectsEN.html">Projects</a>
         </li>
-        <li >
-          <a class="change-language" href="about_meEN.html"><B>EN</B>
-          <img src="/img/EN.png" alt="">
-        </a>
+        <li>
+          <a class="change-language" href="about_me.html"
+            ><B>ES</B>
+            <img src="/img/ESP.png" alt="" />
+          </a>
         </li>
       </ul>
     </nav>
 
     <header class="aboutme-title">
-      <h1>Sobre Mi...</h1>
+      <h1>About Me...</h1>
     </header>
 
     <main class="about-me-main">
@@ -66,7 +67,7 @@
         <div class="estudios">
           <div>
             <h2 class="estudios-title">
-              Estudios
+              Studies
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -78,9 +79,7 @@
               </svg>
             </h2>
             <p class="info-estudios">
-              Soy Tecnólogo en Desarrollo de Software, graduado del Instituto
-              Universitario Pascual Bravo en 2023. Actualmente, estoy cursando
-              el séptimo semestre de Ingeniería en Desarrollo de Software.
+              I am a Software Development Technologist, graduated from Pascual Bravo University Institute in 2023. Currently, I am in the seventh semester of Software Development Engineering.
             </p>
           </div>
           <a href="https://pascualbravo.edu.co/" target="_blank">
@@ -96,7 +95,7 @@
           </a>
           <div>
             <h2 class="job-title">
-              Experiencia Laboral
+              Work Experience
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -119,15 +118,14 @@
                 ></path>
               </svg>
 
-              Marzo a Agosto 2022 Como Practicante.
+              March to August 2022 as an intern.
             </h3>
             <p class="info-practicas">
-              Comencé en Personalsoft durante mis prácticas universitarias.
-              Adquirí experiencia en bases de datos con SQL Server y MySQL,
-              extracción y transformación de datos con Python(Pandas,Anaconda),
-              Azure y Data Factory, y visualización de datos con Power BI.
-              También exploré Power Platform, desarrollando una aplicación para
-              Sura Colombia que me permitió destacarme en la empresa.
+              I started at Personalsoft during my university internship. I gained experience 
+              in databases using SQL Server and MySQL, data extraction and transformation with Python 
+              (Pandas, Anaconda), Azure and Data Factory, and data visualization with Power BI. I also explored 
+              Power Platform, developing an application for Sura Colombia that allowed me to stand out in the company.
+
             </p>
             <h3 class="title-trainee">
               <svg
@@ -139,26 +137,23 @@
                   d="M9 1V3H15V1H17V3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3H7V1H9ZM20 11H4V19H20V11ZM8 13V15H6V13H8ZM13 13V15H11V13H13ZM18 13V15H16V13H18ZM7 5H4V9H20V5H17V7H15V5H9V7H7V5Z"
                 ></path>
               </svg>
-              Octubre 2022 - Mayo 2023 Como Trainee.
+              October 2022 - May 2023 as a Trainee.
             </h3>
             <p class="info-trainee">
-              Después de destacarme en mi desempeño, fui contratado como
-              Trainee, desempeñando funciones tanto de Analista de Datos como de
-              desarrollador en Power Platform. Durante este tiempo, utilicé
-              herramientas como Power BI, bases de datos como MySQL y SQL
-              Server, Python con énfasis en Pandas, Data Azure Factory, y
-              trabajé en el entorno de Power Platform, incluyendo Power Automate
-              y Power Apps.
+              After excelling in my performance, I was hired as a Trainee, performing roles as both a Data Analyst 
+              and a Power Platform developer. During this time, I utilized tools such as Power BI, databases like MySQL
+              and SQL Server, Python with a focus on Pandas, Azure Data Factory, and worked within the Power Platform 
+              environment, including Power Automate and Power Apps.
             </p>
           </div>
         </div>
 
         <!-- SKILLS -->
         <div class="skills">
-          <h2 class="skills-title">Habilidades</h2>
+          <h2 class="skills-title">Skills</h2>
 
           <div>
-            <h3>Analisis de datos</h3>
+            <h3>Data Analysis </h3>
             <div class="data-analist">
               <div class="powerbi svgbg">
                 <svg
@@ -514,7 +509,7 @@
           </div>
 
           <div>
-            <h3>Base de datos</h3>
+            <h3>Data Base</h3>
             <div class="data-base">
               <div class="sql svgbg">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 48 48">
@@ -526,7 +521,7 @@
           </div>
 
           <div>
-            <h3>Automatizadores</h3>
+            <h3>Automators</h3>
             <div class="automatizadores">
               <div class="powerautomate svgbg">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 48 48">
@@ -546,7 +541,7 @@
           </div>
 
           <div>
-            <h3>Lenguajes</h3>
+            <h3>Code Languages</h3>
             <div class="otroslenguajes">
               <div class="c# svgbg">
                 <svg
@@ -676,7 +671,7 @@
           </div>
 
           <div>
-            <h3>Otras Herramientas</h3>
+            <h3>Other Tools</h3>
             <div class="herramientas">
 
               <div class="visualstudiocode svgbg">
@@ -713,7 +708,7 @@
         <!-- COURSES -->
 
         <div class="courses">
-          <h2 class="courses-title">Mis Cursos</h2>
+          <h2 class="courses-title">My Courses</h2>
 
           <div class="img-curso1">
             <a
