--- a/indexEN.html
+++ b/indexEN.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="img/king.svg" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <title>Amauj Portafolio</title>
+    <title>Amauj´s Portfolio</title>
     <script defer src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +33,7 @@
     </div>
 
     <nav>
-      <a href="index.html"
+      <a href="indexEN.html"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -45,24 +45,24 @@
       ></a>
       <ul>
         <li>
-          <a href="projects.html">Proyectos</a>
+          <a href="projectsEN.html">Projects</a>
         </li>
         <li>
-          <a href="about_me.html">Sobre mi</a>
+          <a href="about_meEN.html">About me</a>
         </li>
-        <li >
-          <a class="change-language" href="indexEN.html"><B>EN</B>
-          <img src="/img/EN.png" alt="">
-        </a>
+        <li>
+          <a class="change-language" href="index.html"
+            ><B>ES</B>
+            <img src="/img/ESP.png" alt="" />
+          </a>
         </li>
-
       </ul>
     </nav>
 
     <main>
       <section class="info">
         <div class="typewriter">
-          <h1 class="name-title">SOY</h1>
+          <h1 class="name-title">I'M</h1>
           <i>
             <div class="content-text-animation"></div>
           </i>
@@ -70,17 +70,17 @@
         </div>
 
         <p class="name-title__desc">
-          Soy tu <b>Desarrollador</b> y <b>Analista de datos</b> de confianza. Aquí podrás encontrar
-          ejemplos de mi trabajo en el mundo del desarrollo. ¡Explora y siéntete
-          libre de contactarme para colaborar en proyectos futuros! Estoy
-          comprometido a mejorar continuamente y ofrecerte soluciones de alta
-          calidad para tus necesidades de desarrollo. ¡Espero poder trabajar
-          juntos pronto!
+          I'm your trusted <b>Developer</b> and <b>Data Analyst</b>. Here you
+          can find examples of my work in the development world. Explore and
+          feel free to contact me to collaborate on future projects! I'm
+          committed to continuous improvement and providing high-quality
+          solutions for your development needs. I look forward to working
+          together soon!
         </p>
 
         <div class="about-work">
-          <a class="about-me-btn" href="about_me.html">
-            Ver más sobre mi
+          <a class="about-me-btn" href="about_meEN.html">
+            More about me
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -91,7 +91,7 @@
               ></path>
             </svg>
           </a>
-          <div class="available-work" href="">Disponible para trabajar</div>
+          <div class="available-work" href="">Available to work</div>
         </div>
       </section>
     </main>
