--- a/projectsEN.html
+++ b/projectsEN.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="img/king.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <title>Amauj Portafolio</title>
+    <title>Amauj´s Portfolio</title>
     <script defer src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,7 +32,7 @@
     </ul>
 </div >
     <nav>
-      <a href="index.html"
+      <a href="indexEN.html"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -44,17 +44,18 @@
       ></a>
       <ul>
         <li>
-          <a href="about_me.html">Sobre mi</a>
+          <a href="about_meEN.html">About me</a>
         </li>
-        <li >
-          <a class="change-language" href="projectsEN.html"><B>EN</B>
-          <img src="/img/EN.png" alt="">
-        </a>
+        <li>
+          <a class="change-language" href="projects.html"
+            ><B>ES</B>
+            <img src="/img/ESP.png" alt="" />
+          </a>
         </li>
       </ul>
     </nav>
     <header class="projects-title">
-        <h1>MIS PROYECTOS</h1>
+        <h1>MY PROJECTS</h1>
     </header>
     <main class="projects-main">
 
@@ -78,9 +79,9 @@
               </div>
               <div class="infos">
                 <span class="name"> Weather App</span>
-                <span class="lorem"lore>Accede al pronóstico meteorológico detallado</span>
+                <span class="lorem"lore>Access the detailed weather forecast.</span>
 
-                <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> View Project</a>
               </div>
             </div>
           </label>
@@ -95,9 +96,9 @@
               </div>
               <div class="infos">
                 <span class="name"> App </span>
-                <span class="lorem"lore>Aca va una descripcion</span>
+                <span class="lorem"lore>Here is a project description</span>
 
-                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> View Project</a>
               </div>
             </div>
           </label>
@@ -112,9 +113,9 @@
               </div>
               <div class="infos">
                 <span class="name"> App </span>
-                <span class="lorem"lore>Aca va una descripcion</span>
+                <span class="lorem"lore>Here is a project description</span>
 
-                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> View Project</a>
               </div>
             </div>
           </label>
@@ -128,9 +129,9 @@
               </div>
               <div class="infos">
                 <span class="name"> App </span>
-                <span class="lorem"lore>Aca va una descripcion</span>
+                <span class="lorem"lore>Here is a project description</span>
 
-                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> View Project</a>
               </div>
             </div>
           </label>
@@ -144,9 +145,9 @@
               </div>
               <div class="infos">
                 <span class="name"> App </span>
-                <span class="lorem"lore>Aca va una descripcion</span>
+                <span class="lorem"lore>Here is a project description</span>
 
-                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> View Project</a>
               </div>
             </div>
           </label>
