--- a/about_me.html
+++ b/about_me.html
@@ -50,7 +50,7 @@
         </li>
         <li >
           <a class="change-language" href="about_meEN.html"><B>EN</B>
-          <img src="/img/EN.png" alt="">
+          <img src="img/EN.png" alt="">
         </a>
         </li>
       </ul>
