--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </li>
         <li >
           <a class="change-language" href="indexEN.html"><B>EN</B>
-          <img src="/img/EN.png" alt="">
+          <img src="img/EN.png" alt="">
         </a>
         </li>
 
