--- a/indexEN.html
+++ b/indexEN.html
@@ -53,7 +53,7 @@
         <li>
           <a class="change-language" href="index.html"
             ><B>ES</B>
-            <img src="/img/ESP.png" alt="" />
+            <img src="img/ESP.png" alt="" />
           </a>
         </li>
       </ul>
