--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
         </li>
         <li >
           <a class="change-language" href="projectsEN.html"><B>EN</B>
-          <img src="/img/EN.png" alt="">
+          <img src="img/EN.png" alt="">
         </a>
         </li>
       </ul>
