--- a/projectsEN.html
+++ b/projectsEN.html
@@ -49,7 +49,7 @@
         <li>
           <a class="change-language" href="projects.html"
             ><B>ES</B>
-            <img src="/img/ESP.png" alt="" />
+            <img src="img/ESP.png" alt="" />
           </a>
         </li>
       </ul>
