--- a/about_meEN.html
+++ b/about_meEN.html
@@ -51,7 +51,7 @@
         <li>
           <a class="change-language" href="about_me.html"
             ><B>ES</B>
-            <img src="/img/ESP.png" alt="" />
+            <img src="img/ESP.png" alt="" />
           </a>
         </li>
       </ul>
