--- a/about_me.html
+++ b/about_me.html
@@ -725,6 +725,7 @@
                 alt="CertificadoSQLBasic"
               />
             </a>
+            <img src="img/CertificadoLinux.png" alt="Certificado Linux">
           </div>
         </div>
       </section>
@@ -807,7 +808,6 @@
         </svg>
       </a>
     </footer>
-    <div class="cursor-outline"></div>
-    <div class="cursor-dot"></div>
+    
   </body>
 </html>
