--- a/about_meEN.html
+++ b/about_meEN.html
@@ -720,6 +720,8 @@
                 alt="CertificadoSQLBasic"
               />
             </a>
+            
+            <img src="img/CertificadoLinux.png" alt="Certificado Linux">
           </div>
         </div>
       </section>
@@ -802,7 +804,5 @@
         </svg>
       </a>
     </footer>
-    <div class="cursor-outline"></div>
-    <div class="cursor-dot"></div>
   </body>
 </html>
