--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <p class="name-title__desc">
-          Soy tu <b>Desarrollador</b> y <b>Analista de datos</b> de confianza. Aquí podrás encontrar
+          Soy tu <b>Desarrollador Front-End</b> y <b>Analista de datos</b> de confianza. Aquí podrás encontrar
           ejemplos de mi trabajo en el mundo del desarrollo. ¡Explora y siéntete
           libre de contactarme para colaborar en proyectos futuros! Estoy
           comprometido a mejorar continuamente y ofrecerte soluciones de alta
