--- a/indexEN.html
+++ b/indexEN.html
@@ -70,7 +70,7 @@
         </div>
 
         <p class="name-title__desc">
-          I'm your trusted <b>Developer</b> and <b>Data Analyst</b>. Here you
+          I'm your trusted <b>Front-End Developer</b> and <b>Data Analyst</b>. Here you
           can find examples of my work in the development world. Explore and
           feel free to contact me to collaborate on future projects! I'm
           committed to continuous improvement and providing high-quality
