--- a/indexEN.html
+++ b/indexEN.html
@@ -62,10 +62,8 @@
     <main>
       <section class="info">
         <div class="typewriter">
-          <h1 class="name-title">I'M</h1>
-          <i>
+          <h1 class="name-title">Hi! I´m</h1>
             <div class="content-text-animation"></div>
-          </i>
           <div class="writing-bar"></div>
         </div>
 
