--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
     <main>
       <section class="info">
         <div class="typewriter">
-          <h1 class="name-title">SOY</h1>
-          <i>
+          
+          <h1 class="name-title">Hey! Soy</h1>
+
             <div class="content-text-animation"></div>
-          </i>
+
           <div class="writing-bar"></div>
         </div>
 
