--- a/about_me.html
+++ b/about_me.html
@@ -66,65 +66,71 @@
 
     <main class="about-me-main">
       <section class="info-aboutme">
+        
         <!-- Educacion -->
         <div class="estudios">
-          <div>
             <h2 class="estudios-title">
-              Educacion
               <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-              >
-                <path
-                  d="M4 11.3333L0 9L12 2L24 9V17.5H22V10.1667L20 11.3333V18.0113L19.7774 18.2864C17.9457 20.5499 15.1418 22 12 22C8.85817 22 6.05429 20.5499 4.22263 18.2864L4 18.0113V11.3333ZM6 12.5V17.2917C7.46721 18.954 9.61112 20 12 20C14.3889 20 16.5328 18.954 18 17.2917V12.5L12 16L6 12.5ZM3.96927 9L12 13.6846L20.0307 9L12 4.31541L3.96927 9Z"
-                ></path>
-              </svg>
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path
+                d="M4 11.3333L0 9L12 2L24 9V17.5H22V10.1667L20 11.3333V18.0113L19.7774 18.2864C17.9457 20.5499 15.1418 22 12 22C8.85817 22 6.05429 20.5499 4.22263 18.2864L4 18.0113V11.3333ZM6 12.5V17.2917C7.46721 18.954 9.61112 20 12 20C14.3889 20 16.5328 18.954 18 17.2917V12.5L12 16L6 12.5ZM3.96927 9L12 13.6846L20.0307 9L12 4.31541L3.96927 9Z"
+              ></path>
+            </svg>
+              Educacion
             </h2>
-            <p class="info-estudios">
-              Tecnólogo en Desarrollo de Software, graduado del Instituto
-              Universitario Pascual Bravo en 2023. Actualmente, estoy cursando
-              el séptimo semestre de Ingeniería en Desarrollo de Software.
-            </p>
-          </div>
-          <a href="https://pascualbravo.edu.co/" target="_blank">
-            <img src="img/LOGOPASCUALBLANCO.png" alt="LOGO PASCUAL BRAVO" />
-          </a>
+              <!-- TECNOLOGO -->
+                <div class="tecnologo ">
+                  <p class="text-estudios">
+                    Graduado del Instituto Universitario Pascual Bravo en 2023.
+                  </p>
+                  <div class="info-estudios">
+                    <a href="https://pascualbravo.edu.co/" target="_blank">
+                      <img src="img/LOGOPASCUALBLANCO.png" alt="LOGO PASCUAL BRAVO" />
+                    </a>
+                  <p class="title-estudios">
+                    Tecnólogo en Desarrollo de Software
+                  </p>
+                  <p class="duracion">2019 - 2023</p>
+                </div>
+              </div>
         </div>
 
         <!-- Experiencia laboral -->
         <div class="experiencia-laboral">
-          <a href="https://personalsoft.com/co/" target="_blank">
-            <img src="img/PersonalsoftLogo.png" alt="LOGO PERSONALSOFT" />
-          </a>
+
           <div>
             <h2 class="job-title">
-              Experiencia Laboral
               <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-              >
-                <path
-                  d="M7 5V2C7 1.44772 7.44772 1 8 1H16C16.5523 1 17 1.44772 17 2V5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V6C2 5.44772 2.44772 5 3 5H7ZM9 13H4V19H20V13H15V16H9V13ZM20 7H4V11H9V9H15V11H20V7ZM11 11V14H13V11H11ZM9 3V5H15V3H9Z"
-                ></path>
-              </svg>
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path
+                d="M7 5V2C7 1.44772 7.44772 1 8 1H16C16.5523 1 17 1.44772 17 2V5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V6C2 5.44772 2.44772 5 3 5H7ZM9 13H4V19H20V13H15V16H9V13ZM20 7H4V11H9V9H15V11H20V7ZM11 11V14H13V11H11ZM9 3V5H15V3H9Z"
+              ></path>
+            </svg>
+              Experiencia Laboral
             </h2>
 
-            <h3 class="title-practicante">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-              >
-                <path
-                  d="M9 1V3H15V1H17V3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3H7V1H9ZM20 11H4V19H20V11ZM8 13V15H6V13H8ZM13 13V15H11V13H13ZM18 13V15H16V13H18ZM7 5H4V9H20V5H17V7H15V5H9V7H7V5Z"
-                ></path>
-              </svg>
+            <!-- practicante -->
+          <div class="practicante">
+            <div class="info-job">
 
-              Marzo a Agosto 2022 Como Practicante.
+            <a href="https://personalsoft.com/co/" target="_blank">
+              <img src="img/PersonalsoftLogo.png" alt="LOGO PERSONALSOFT"/>
+            </a>
+            <p class="title-job">
+              Practicas Universitarias
+            </p>
+            <h3>
+              PersonalSoft Colombia | Remoto
             </h3>
-            <p class="info-practicas">
+            <p class="duracion">Marzo 2022 - Agosto 2022</p>
+          </div>
+            <p class="text-job">
               Comencé en Personalsoft durante mis prácticas universitarias.
               Adquirí experiencia en bases de datos con SQL Server y MySQL,
               extracción y transformación de datos con Python(Pandas,Anaconda),
@@ -132,27 +138,33 @@
               También exploré Power Platform, desarrollando una aplicación para
               Sura Colombia que me permitió destacarme en la empresa.
             </p>
-            <h3 class="title-trainee">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-              >
-                <path
-                  d="M9 1V3H15V1H17V3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3H7V1H9ZM20 11H4V19H20V11ZM8 13V15H6V13H8ZM13 13V15H11V13H13ZM18 13V15H16V13H18ZM7 5H4V9H20V5H17V7H15V5H9V7H7V5Z"
-                ></path>
-              </svg>
-              Octubre 2022 - Mayo 2023 Como Trainee.
-            </h3>
-            <p class="info-trainee">
-              Después de destacarme en mi desempeño, fui contratado como
-              Trainee, desempeñando funciones tanto de Analista de Datos como de
-              desarrollador en Power Platform. Durante este tiempo, utilicé
-              herramientas como Power BI, bases de datos como MySQL y SQL
-              Server, Python con énfasis en Pandas, Data Azure Factory, y
-              trabajé en el entorno de Power Platform, incluyendo Power Automate
-              y Power Apps.
-            </p>
+          </div>
+
+            <!-- Trainee -->
+            <div class="trainee">
+              <div class="info-job">
+  
+              <a href="https://personalsoft.com/co/" target="_blank">
+                <img src="img/PersonalsoftLogo.png" alt="LOGO PERSONALSOFT"/>
+              </a>
+              <p class="title-job">
+                Analista de datos / Desarrollador Power Platform Trainee
+              </p>
+              <h3>
+                PersonalSoft Colombia | Remoto
+              </h3>
+              <p class="duracion">Octubre 2022 - Mayo 2023</p>
+            </div>
+              <p class="text-job">
+                Después de destacarme en mi desempeño, fui contratado como
+                Trainee, desempeñando funciones tanto de Analista de Datos como de
+                desarrollador en Power Platform. Durante este tiempo, utilicé
+                herramientas como Power BI, bases de datos como MySQL y SQL
+                Server, Python con énfasis en Pandas, Data Azure Factory, y
+                trabajé en el entorno de Power Platform, incluyendo Power Automate
+                y Power Apps.
+              </p>
+            </div>
           </div>
         </div>
 
