upload about_me page

--- a/about_me.html
+++ b/about_me.html
@@ -1192,23 +1192,17 @@
           </div>
         </section>
 
-        <!-- COURSES -->
+        <!-- Courses -->
         <section class="courses">
           <h2 class="courses-title">Cursos</h2>
-
-          <div class="img-curso1">
-            <a
-              href="https://www.hackerrank.com/certificates/06b1407b0fff"
-              target="_blank"
-            >
-              <img
-                src="img/CertificadoSQLBasic.png"
-                alt="CertificadoSQLBasic"
-              />
-            </a>
-            <img src="img/CertificadoLinux.png" alt="Certificado Linux" />
+          <div class="courses-container">
+            <div>
+              <img href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank" src="img/CertificadoSQLBasic.png" alt="CertificadoSQLBasic"/>
+            </div>
+            <div>
+              <img src="img/CertificadoLinux.png" alt="Certificado Linux" />
+            </div>
           </div>
-        </div>
       </section>
     </section>
     </main>
