--- a/about_meEN.html
+++ b/about_meEN.html
@@ -1184,21 +1184,15 @@
 
         <!-- COURSES -->
         <section class="courses">
-          <h2 class="courses-title">Curses</h2>
-
-          <div class="img-curso1">
-            <a
-              href="https://www.hackerrank.com/certificates/06b1407b0fff"
-              target="_blank"
-            >
-              <img
-                src="img/CertificadoSQLBasic.png"
-                alt="CertificadoSQLBasic"
-              />
-            </a>
-            <img src="img/CertificadoLinux.png" alt="Certificado Linux" />
+          <h2 class="courses-title">Courses</h2>
+          <div class="courses-container">
+            <div>
+              <img href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank" src="img/CertificadoSQLBasic.png" alt="CertificadoSQLBasic"/>
+            </div>
+            <div>
+              <img src="img/CertificadoLinux.png" alt="Certificado Linux" />
+            </div>
           </div>
-        </div>
       </section>
     </section>
     </main>
