--- a/about_me.html
+++ b/about_me.html
@@ -54,7 +54,7 @@
         <li>
           <a class="change-language" href="about_meEN.html"
             ><b>EN</b>
-            <img src="img/EN.png" alt="" />
+            <img src="img/EN.webp" alt="" />
           </a>
         </li>
       </ul>
@@ -86,7 +86,7 @@
             <div class="practicante">
               <div class="info-job">
                 <a href="https://personalsoft.com/co/" target="_blank">
-                  <img src="img/PersonalsoftLogo.png" alt="LOGO PERSONALSOFT" />
+                  <img src="img/PersonalsoftLogo.webp" alt="LOGO PERSONALSOFT" />
                 </a>
                 <p class="title-job">Practicas Universitarias</p>
                 <h3>PersonalSoft Colombia | Remoto</h3>
@@ -107,7 +107,7 @@
             <div class="trainee">
               <div class="info-job">
                 <a href="https://personalsoft.com/co/" target="_blank">
-                  <img src="img/PersonalsoftLogo.png" alt="LOGO PERSONALSOFT" />
+                  <img src="img/PersonalsoftLogo.webp" alt="LOGO PERSONALSOFT" />
                 </a>
                 <p class="title-job">
                   Analista de datos / Desarrollador Power Platform Trainee
@@ -149,7 +149,7 @@
             </p>
             <div class="info-estudios">
               <a href="https://pascualbravo.edu.co/" target="_blank">
-                <img src="img/LOGOPASCUALBLANCO.png" alt="LOGO PASCUAL BRAVO" />
+                <img src="img/LOGOPASCUALBLANCO.webp" alt="LOGO PASCUAL BRAVO" />
               </a>
               <p class="title-estudios">Tecnólogo en Desarrollo de Software</p>
               <p class="duracion">2019 - 2023</p>
@@ -1013,12 +1013,12 @@
               <img
                 href="https://www.hackerrank.com/certificates/06b1407b0fff"
                 target="_blank"
-                src="img/CertificadoSQLBasic.png"
+                src="img/CertificadoSQLBasic.webp"
                 alt="CertificadoSQLBasic"
               />
             </div>
             <div>
-              <img src="img/CertificadoLinux.png" alt="Certificado Linux" />
+              <img src="img/CertificadoLinux.webp" alt="Certificado Linux" />
             </div>
           </div>
         </section>
