--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li>
           <a class="change-language" href="indexEN.html"
             ><b>EN</b>
-            <img src="img/EN.png" alt="" />
+            <img src="img/EN.webp" alt="" />
           </a>
         </li>
       </ul>
