--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
         <li>
           <a class="change-language" href="projectsEN.html"
             ><b>EN</b>
-            <img src="img/EN.png" alt="" />
+            <img src="img/EN.webp" alt="" />
           </a>
         </li>
       </ul>
