--- a/projectsEN.html
+++ b/projectsEN.html
@@ -32,16 +32,17 @@
     </div>
 
     <nav>
-      <a href="indexEN.html"
-        ><svg
+      <a href="indexEN.html">
+        <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
           fill="currentColor"
         >
           <path
             d="M20 20C20 20.5523 19.5523 21 19 21H5C4.44772 21 4 20.5523 4 20V11L1 11L11.3273 1.6115C11.7087 1.26475 12.2913 1.26475 12.6727 1.6115L23 11L20 11V20ZM8 15V17H16V15H8Z"
-          ></path></svg
-      ></a>
+          ></path>
+          </svg>
+        </a>
       <ul>
         <li>
           <a href="about_meEN.html">About me</a>
@@ -49,7 +50,7 @@
         <li>
           <a class="change-language" href="projects.html"
             ><b>ES</b>
-            <img src="img/ESP.png" alt="" />
+            <img src="img/ESP.webp" alt="" />
           </a>
         </li>
       </ul>
