--- a/about_meEN.html
+++ b/about_meEN.html
@@ -34,16 +34,17 @@
     </div>
 
     <nav>
-      <a href="indexEN.html"
-        ><svg
+      <a href="indexEN.html">
+        <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
           fill="currentColor"
         >
           <path
             d="M20 20C20 20.5523 19.5523 21 19 21H5C4.44772 21 4 20.5523 4 20V11L1 11L11.3273 1.6115C11.7087 1.26475 12.2913 1.26475 12.6727 1.6115L23 11L20 11V20ZM8 15V17H16V15H8Z"
-          ></path></svg
-      ></a>
+          ></path>
+        </svg>
+      </a>
       <ul>
         <li>
           <a href="projectsEN.html">Projects</a>
@@ -51,7 +52,7 @@
         <li>
           <a class="change-language" href="about_me.html"
             ><B>ES</B>
-            <img src="img/ESP.png" alt="" />
+            <img src="img/ESP.webp" alt="" />
           </a>
         </li>
       </ul>
@@ -86,7 +87,7 @@
             <div class="info-job">
 
             <a href="https://personalsoft.com/co/" target="_blank">
-              <img src="img/PersonalsoftLogo.png" alt="LOGO PERSONALSOFT"/>
+              <img src="img/PersonalsoftLogo.webp" alt="LOGO PERSONALSOFT"/>
             </a>
             <p class="title-job">
               University Internship
@@ -108,7 +109,7 @@
               <div class="info-job">
   
               <a href="https://personalsoft.com/co/" target="_blank">
-                <img src="img/PersonalsoftLogo.png" alt="LOGO PERSONALSOFT"/>
+                <img src="img/PersonalsoftLogo.webp" alt="LOGO PERSONALSOFT"/>
               </a>
               <p class="title-job">
                 Data Analyst / Power Platform Developer Trainee
@@ -148,7 +149,7 @@
                   </p>
                   <div class="info-estudios">
                     <a href="https://pascualbravo.edu.co/" target="_blank">
-                      <img src="img/LOGOPASCUALBLANCO.png" alt="LOGO PASCUAL BRAVO" />
+                      <img src="img/LOGOPASCUALBLANCO.webp" alt="LOGO PASCUAL BRAVO" />
                     </a>
                   <p class="title-estudios">
                     Software Development Technologist
@@ -1012,10 +1013,10 @@
           <h2 class="courses-title">Courses</h2>
           <div class="courses-container">
             <div>
-              <img href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank" src="img/CertificadoSQLBasic.png" alt="CertificadoSQLBasic"/>
+              <img href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank" src="img/CertificadoSQLBasic.webp" alt="CertificadoSQLBasic"/>
             </div>
             <div>
-              <img src="img/CertificadoLinux.png" alt="Certificado Linux" />
+              <img src="img/CertificadoLinux.webp" alt="Certificado Linux" />
             </div>
           </div>
       </section>
