--- a/about_meEN.html
+++ b/about_meEN.html
@@ -1013,10 +1013,28 @@
           <h2 class="courses-title">Courses</h2>
           <div class="courses-container">
             <div>
-              <img href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank" src="img/CertificadoSQLBasic.webp" alt="CertificadoSQLBasic"/>
+              <img src="img/CertificadoSQLBasic.webp" alt="CertificadoSQLBasic"/>
+                <div class="course-hover">
+                  <a href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank">
+                    <button>View Certificated</button>
+                  </a>
+                  <div class="info-hover">
+                    <h3>SQL (Basic) Certificate</h3>
+                    <p>HackerRank</p>
+                  </div>
+                </div>
             </div>
             <div>
               <img src="img/CertificadoLinux.webp" alt="Certificado Linux" />
+              <div class="course-hover">
+                <a href="pdf/CertificadoLinux.pdf" target="_blank">
+                  <button>View Certificated</button>
+                </a>
+                <div class="info-hover">
+                  <h3>Course Linux</h3>
+                  <p>Cisco Networking Academy</p>
+                </div>
+              </div>
             </div>
           </div>
       </section>
