--- a/about_me.html
+++ b/about_me.html
@@ -1010,15 +1010,28 @@
           <h2 class="courses-title">Cursos</h2>
           <div class="courses-container">
             <div>
-              <img
-                href="https://www.hackerrank.com/certificates/06b1407b0fff"
-                target="_blank"
-                src="img/CertificadoSQLBasic.webp"
-                alt="CertificadoSQLBasic"
-              />
+              <img src="img/CertificadoSQLBasic.webp" alt="CertificadoSQLBasic"/>
+                <div class="course-hover">
+                  <a href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank">
+                    <button>Ver Certificado</button>
+                  </a>
+                  <div class="info-hover">
+                    <h3>SQL (Basic) Certificate</h3>
+                    <p>HackerRank</p>
+                  </div>
+                </div>
             </div>
             <div>
               <img src="img/CertificadoLinux.webp" alt="Certificado Linux" />
+              <div class="course-hover">
+                <a href="pdf/CertificadoLinux.pdf" target="_blank">
+                  <button>Ver Certificado</button>
+                </a>
+                <div class="info-hover">
+                  <h3>Curso Linux</h3>
+                  <p>Cisco Networking Academy</p>
+                </div>
+              </div>
             </div>
           </div>
         </section>
