--- a/projects.html
+++ b/projects.html
@@ -55,11 +55,11 @@
       </ul>
     </nav>
 
-    <header class="projects-title">
-      <h1>Proyectos...</h1>
-    </header>
-
-    <main class="projects-main"></main>
+    <main class="projects-main">
+      <header class="projects-title">
+        <h1>Proyectos...</h1>
+      </header>
+    </main>
 
     <footer>
       <!-- ICONO GIHUB  -->
@@ -78,7 +78,8 @@
       <!-- ICONO LINKEDIN  -->
       <a
         href="https://www.linkedin.com/in/juan-manuel-morales-gonzalez-a2ba7522b/"
-        target="_blank">
+        target="_blank"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -103,6 +104,5 @@
         </svg>
       </a>
     </footer>
-    
   </body>
 </html>
