--- a/projectsEN.html
+++ b/projectsEN.html
@@ -41,8 +41,8 @@
           <path
             d="M20 20C20 20.5523 19.5523 21 19 21H5C4.44772 21 4 20.5523 4 20V11L1 11L11.3273 1.6115C11.7087 1.26475 12.2913 1.26475 12.6727 1.6115L23 11L20 11V20ZM8 15V17H16V15H8Z"
           ></path>
-          </svg>
-        </a>
+        </svg>
+      </a>
       <ul>
         <li>
           <a href="about_meEN.html">About me</a>
@@ -55,12 +55,11 @@
         </li>
       </ul>
     </nav>
-    <header class="projects-title">
-      <h1>Projects...</h1>
-    </header>
 
     <main class="projects-main">
-
+      <header class="projects-title">
+        <h1>Projects...</h1>
+      </header>
     </main>
 
     <footer>
@@ -80,7 +79,8 @@
       <!-- ICONO LINKEDIN  -->
       <a
         href="https://www.linkedin.com/in/juan-manuel-morales-gonzalez-a2ba7522b/"
-        target="_blank">
+        target="_blank"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
